# ssi-identity-system

./: .env.example  .gitignore  CHANGELOG.md  CHAY_HE_THONG.md  DEMO_ACCOUNTS.md  DEMO_GUIDE.md  HANDOVER.md  HD_DEMO_DO_AN.md  NOTES.md  README.md  SETUP_GUIDE.md  SystemDesign.md  TASKS.md  ape-config.yaml  file_QmQLmtgz (1)  file_QmQPRZZX  file_QmeKmPXE  fix_db.py  grant_creator.py  private_key (1).pem  private_key (2).pem  private_key (3).pem  private_key (4).pem  private_key (5).pem  private_key (6).pem  private_key.pem  private_key_account2.pem  private_key_user2.pem  private_key_user3.pem  pyproject.toml  scratch.py  scratch2.py  scratch3.py  scratch_check.py  scratch_check_db.py  scratch_check_db2.py  scratch_key.py  setup.sh
backend/: main.py  requirements.txt
backend/models/: database.py
backend/routers/: auth.py  consent.py  crypto.py  did.py  ipfs.py  nft.py
backend/services/: blockchain_service.py  crypto_service.py  ipfs_service.py
backend/tests/: test_crypto_service.py  test_ipfs_service.py
contracts/: DID_Registry.vy  Soulbound_Contract.vy  deploy.py  requirements.txt
contracts/tests/: test_did_registry.py
frontend/: creator.html  index.html  login.html  user.html  verifier.html
frontend/css/: style.css
frontend/js/: api.js  (+4 more)
nft-integration/: Soulbound_Contract.vy  ape-config.yaml  deploy.py  integration.py
scripts/: create_did.py  demo_full_flow.py  demo_private_key.pem  deploy.py  deploy_all.sh  deploy_sbt.py  deploy_web3.py  grant_creator.py  issue_did.py  run_tests.sh  start_local_node.sh
shared/: constants.js  constants.py
(+3 files in other folders)
